# PasswordManager

./: README.md
password-manager/: .gitignore  Cargo.toml  README  README.md
password-manager/src/: main.rs  main2.rs
password-manager/src/database/: items.rs  users.rs
password-manager/src/menu/: menu_layout.rs
password-manager/src/menu/menu_functions/: add_new_password.rs  generate_password.rs  list_passwords.rs  remove_password.rs  retrieve_password.rs  update_password.rs
password-manager/src/password_functions/: password_manager.rs
password-manager/src/random_code/: main3.rs  other_code.rs
password-manager/src/user_auth/: help.rs  menu_auth.rs
password-manager/src/user_auth/login_functions_folder/: listener.rs  login_function.rs
