[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rpassword = "7.3.1"
ring = "0.17.8"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.133"
jsonwebtoken = "=9.3.0"
chrono = "0.4.39"
base64 = "0.22.1"
firebase-rs = "=2.2.0"
