[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rpassword = "7.3.1"
ring = "0.17.8"
serde = "1.0.216"
chrono = "0.4.39"
base64 = "0.22.1"
firestore = "0.44.0"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
dotenv = "=0.15.0"
gcloud-sdk = "0.26.0"
prettytable = "0.10.0"
rand = "0.8.5"
colored = "2.1.0"
oauth2 = "4.4.2"
reqwest = "0.12.9"
axum = "=0.7.9"
